// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering Renders correctly when not verified 1`] = `
<main
  id="profile"
>
  <section
    id="login-info"
  >
    <h2>
      John Smith
    </h2>
    <p>
      john.smith@yahoo.net
      <span
        id="not-verified"
      >
         Not Verified
      </span>
    </p>
    <button
      onClick={[Function]}
    >
      Click to resend verification email.
    </button>
  </section>
  <section
    id="personal-info"
  >
    <ul>
      <li>
        <span>
          Age: 
        </span>
      </li>
      <li>
        <span>
          Height: 
        </span>
        "
      </li>
      <li>
        <span>
          Weight: 
        </span>
         lbs
      </li>
    </ul>
    <button
      id="edit-info"
      onClick={[Function]}
    >
      Edit Profile
    </button>
  </section>
  <section
    id="bags"
  >
    <h3>
      Bags
    </h3>
    <ul />
    <button
      id="add-bag"
      onClick={[Function]}
    >
      Add Bag
    </button>
  </section>
  <section
    id="matches"
  >
    <h3>
      Matches
    </h3>
    <ul />
    <a
      href="/match/create/"
      id="create-match-link"
      onClick={[Function]}
    >
      Create Match
    </a>
  </section>
</main>
`;

exports[`Rendering Renders correctly when verified 1`] = `
<main
  id="profile"
>
  <section
    id="login-info"
  >
    <h2>
      John Smith
    </h2>
    <p>
      john.smith@yahoo.net
      <span
        id="verified"
      >
         Verified
      </span>
    </p>
    <button
      onClick={[Function]}
    >
      Click to resend verification email.
    </button>
  </section>
  <section
    id="personal-info"
  >
    <ul>
      <li>
        <span>
          Age: 
        </span>
      </li>
      <li>
        <span>
          Height: 
        </span>
        "
      </li>
      <li>
        <span>
          Weight: 
        </span>
         lbs
      </li>
    </ul>
    <button
      id="edit-info"
      onClick={[Function]}
    >
      Edit Profile
    </button>
  </section>
  <section
    id="bags"
  >
    <h3>
      Bags
    </h3>
    <ul />
    <button
      id="add-bag"
      onClick={[Function]}
    >
      Add Bag
    </button>
  </section>
  <section
    id="matches"
  >
    <h3>
      Matches
    </h3>
    <ul />
    <a
      href="/match/create/"
      id="create-match-link"
      onClick={[Function]}
    >
      Create Match
    </a>
  </section>
</main>
`;
